--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApiSettings": {
-    "BaseUrl": "https://localhost:5001/api"
+    "BaseUrl": "http://localhost:5255/api"
   },
   "Logging": {
     "LogLevel": {
